--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,55 @@
+* {
+  border: solid 2px red;
+} 
+
+html {
+  display: flex;
+  align-content: center;
+  height: 100%;
+}
+
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background-image: url(/src/images/the-claymore-hotel.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  background-color: rgba(82, 102, 79);
+  text-align: center;
+}
+
+h1 {
+  font-family: 'Cormorant SC', serif;
+  font-size: 8vh;
+  color: white;
+  /* padding-left: 2vw; */
+  text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
+}
+
+h2 {
+  font-family: 'Cormorant SC', serif;
+  font-size: 3vh;
+  color: white;
+  padding-left: 2vw;
+  text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
+}
+
+h3 {
+  font-family: 'Cormorant SC', serif;
+  font-size: 3vh;
+  color: white;
+  padding-left: 2vw;
+  text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
+}
+
+nav {
+  display: flex;
+  align-items: flex-start;
+}
+
+.hotel-header {
+  display: flex;
+  flex-direction: column;
+  /* width: 60%; */
+  align-items: center;
+  margin-left: 2vw;
 }
