--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,10 +9,13 @@ html {
 }
 
 body {
+  display: block;
+  margin: 0;
   background-image: url(/src/images/the-claymore-hotel.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
+  width: 100%;
   background-color: rgba(82, 102, 79);
   text-align: center;
 }
@@ -20,6 +23,7 @@ body {
 h1 {
   font-family: 'Cormorant SC', serif;
   font-size: 8vh;
+  margin: 0;
   color: white;
   /* padding-left: 2vw; */
   text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
@@ -29,27 +33,24 @@ h2 {
   font-family: 'Cormorant SC', serif;
   font-size: 3vh;
   color: white;
-  padding-left: 2vw;
+  /* padding-left: 2vw; */
   text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
 }
 
 h3 {
   font-family: 'Cormorant SC', serif;
-  font-size: 3vh;
+  font-size: 2vh;
+  margin: 0;
   color: white;
-  padding-left: 2vw;
+  /* padding-left: 2vw; */
   text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
-}
-
-nav {
-  display: flex;
-  align-items: flex-start;
 }
 
 .hotel-header {
   display: flex;
   flex-direction: column;
-  /* width: 60%; */
+  align-items: flex-start;
+  width: 60%;
   align-items: center;
-  margin-left: 2vw;
+  /* margin-left: 2vw; */
 }
