--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,7 +48,6 @@ h3 {
   text-shadow: 13px 9px 12px rgba(0,0,0,0.81);
 }
 
-
 .hotel-header {
   display: flex;
   flex-direction: column;
@@ -128,7 +127,7 @@ h3 {
   font-size: 1.5vh;
 }
 
-.incorrect-login-input {
+.error-message {
   color: red;
 }
 
@@ -220,6 +219,206 @@ h3 {
 .past-box {
   width: 12vw;
   height: 14vh;
+}
+
+/* New Reservation Page */
+.back-dash {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: 30px;
+  right: 10%;
+  width: 20vw;
+  height: 4vh;
+  background-color: white;
+  color: #041d0c;
+  padding: 1.4vh;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px #041d0cce;
+  cursor: pointer;
+}
+
+.available-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80vw;
+    height: 80vh;
+    margin-top: 5vh;
+   background-color: rgba(255, 255, 255, 0.499);
+   border-radius: 10px;
+}
+
+.available-title {
+  background-color: white;
+  border-radius: 8px;
+  width: 30%;
+  height: 5vh;
+  margin-top: 3vh;
+  padding-top: 0.6vh;
+  color: #041d0c;
+  font-size: 24px;
+  box-shadow: 0 4px 4px #59635d;
+  text-align: center;
+}
+
+.availability-button {
+  background-color: white;
+  color: #041d0c;
+  font-family: 'Cormorant SC', serif;
+  font-size: 2vh;
+  font-weight: bold;
+  border-radius: 26px;
+  text-align: center;
+}
+
+.booking-form {
+  display: flex;
+  justify-content: space-around;
+  width: 40vw;
+  margin-top: 2vh;
+}
+
+.booking-forms {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 15vh;
+}
+
+.forms {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #041d0c;
+  width: 20vw;
+  height: 5vh;
+  margin-top: 2vh;
+  padding: 0.5vh;
+  box-shadow: 0 4px 10px #59635d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+} 
+
+#check-button {
+  margin-top: 5vh;
+}
+
+#check-button:hover {
+  transform: translateYU(-3px);
+  box-shadow: 0 4px 10px #59635d;
+}
+
+#check-button:active {
+  transform: translateY(-1px);
+  box-shadow: 0 4px 10px #59635d;
+}
+
+.available-rooms-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin-top: 8vh;
+  width: 100%;
+  height: 60vh;
+  overflow-y: scroll;
+}
+
+.available-rooms {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 8px;
+  height: 32vh;
+  width: 16vw;
+  box-shadow: 0 6px 12px #59635d;
+}
+
+.available-photo {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  
+}
+
+/* Flip Card */
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin: 2vh;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 10px #595d63;
+  border-radius: 6px;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 6px;
+}
+
+.flip-card-front {
+  background-color: white;
+  color: black;
+}
+
+.flip-card-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  background-color: #093115;
+  transform: rotateY(180deg);
+}
+
+.front-details {
+  color: #3a1a4a;
+  font-size: 22px;
+  padding-top: 12%;
+  text-transform: uppercase;
+}
+
+.room-type {
+  font-size: 26px;
+  padding-left: 10px;
+  padding-top: 10px;
+  text-transform: uppercase;
+}
+
+.room-description {
+  font-size: 22px;
+  padding-left: 10px;
+  padding-top: 15px;
+  text-transform: uppercase;
+}
+
+#book-button {
+  width: 3vw;
+  height: auto;
+  margin-bottom: 15px;
+  margin-right: 15px;
 }
 
 
